# equiTie

./: .gitignore  README.md  ROADMAP.md  ai-workflow.md
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  chat.py  config.py  data.py  fx.py  llm.py  main.py  metrics.py  prompt.py  tools.py
backend/tests/: conftest.py  test_api.py  test_chat.py  test_edge_cases.py  test_fx.py  test_metrics_golden.py  test_prompt.py  test_tools.py
frontend/: app.vue  eslint.config.mjs  nuxt.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/assets/css/: main.css
frontend/components/: AppHeader.vue  ChatMessage.vue  ChatPanel.vue  EChart.client.vue  InvestorSwitcher.vue  KpiTile.vue  Panel.vue  PortfolioCharts.vue  ThemeToggle.vue
frontend/composables/: useApi.ts  useChat.ts
frontend/pages/: index.vue
frontend/pages/dashboard/: [id].vue
frontend/plugins/: chunk-reload.client.ts
frontend/tests/: format.test.ts  markdown.test.ts  sse.test.ts
frontend/types/: portfolio.ts
frontend/utils/: format.ts  markdown.ts  sse.ts  suggestions.ts
