[project]
name = "equitie-investor-assistant"
version = "0.1.0"
description = "EquiTie Investor Assistant — deterministic compute engine + API"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
